--- a/client/src/app.css
+++ b/client/src/app.css
@@ -17,17 +17,16 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: #fffbe2;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #f2c853;
 }
 
 body {
   margin: 0;
   display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
@@ -42,7 +41,7 @@ h1 {
 }
 
 #app {
-  max-width: 1280px;
+  width: 1720px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
