Game and sign up page layout

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -54,12 +54,13 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #312200;
   cursor: pointer;
   transition: border-color 0.25s;
+  box-shadow: 0 4px 2px -2px rgba(0,0,0,.2)
 }
 button:hover {
-  border-color: #646cff;
+  border-color:  #f2c853;
 }
 button:focus,
 button:focus-visible {
@@ -75,6 +76,6 @@ button:focus-visible {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #fffbe2;
   }
 }
