Sign up and login now works, Navbar checks for admin, Gamepage checks for character. Lots of Server changes to check for character and Character DTO changes

--- a/client/src/app.css
+++ b/client/src/app.css
@@ -13,6 +13,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  --toastContainerTop: 0.5rem;
+  --toastContainerRight: 0.5rem;
+  --toastContainerBottom: auto;;
+  --toastContainerLeft: calc(50vw - 8rem);
+  --toastWidth: 20rem
 }
 
 a {
